src/objects/Reserve_Withdrawal__c.object
<CustomObject>
    <description>LPAM</description>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Project__c</fullName>
        <label>Loan Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>Reserve Withdrawals</relationshipLabel>
        <relationshipName>Reserve_Withdrawals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operating_Total__c</fullName>
        <label>Operating Total</label>
        <summarizedField>Reserve_Withdrawal_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Reserve_Withdrawal_Item__c.Reserve_Withdrawal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Replacement_Total__c</fullName>
        <label>Replacement Total</label>
        <summarizedField>Reserve_Withdrawal_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Reserve_Withdrawal_Item__c.Reserve_Withdrawal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Reserve Withdrawal</label>
    <nameField>
        <displayFormat>ResWdl-{00000}</displayFormat>
        <label>Reserve Withdrawal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reserve Withdrawals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>